--- a/styles.scss
+++ b/styles.scss
@@ -7,7 +7,10 @@
 }
 
 body {
-    margin: 60px auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 60px;
     width: 960px;
     color: #4E5150;
 }
@@ -22,10 +25,11 @@ body {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 24px;
 
         .profile__image {
-            width: 156px;
             height: 156px;
+            width: auto;
             border-radius: 16px;
             margin-bottom: 16px;
         }
@@ -35,30 +39,30 @@ body {
             margin-bottom: 8px;
         }
         .profile__address {
-            margin-bottom: 24px;
             color: #A9A9A9;
         }
     }
     .stats {
         display: flex;
 
-        .stat-item {
+        .stats__item {
             margin: 0 24px;
             background: #E5E5E5;
             border-radius: 12px;
             width: 100px;
             height: 67px;
             font-weight: 600;
+            cursor: pointer;
 
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
 
-            .stat-item__count {
+            .item__count {
                 font-size: 18px;
             }
-            .stat-item__type {
+            .item__type {
                 font-size: 14px;
                 color: #BDBDBD;
             }
@@ -80,11 +84,11 @@ body {
         box-shadow: 0 4px 6px rgba(0,0,0,0.15);
     }
     .main__image_wide {
-        grid-column: span 2;
+        grid-column: auto / span 2;
     }
     .main__image_high {
-        grid-row: span 2;
-        height: 627px;
+        grid-row: auto / span 2;
+        height: 100%;
     }
 }
 
@@ -96,5 +100,53 @@ body {
     .description__username {
         text-decoration: underline;
         font-weight: 600;
+    }
+}
+
+@media (max-width: 1000px) {
+    body {
+        margin-top: 30px;
+        width: auto;
+    }
+
+    .header {
+        margin-bottom: 39px;
+
+        .profile {
+            margin-bottom: 12px;
+
+            .profile__image {
+                height: 100px;
+                margin-bottom: 12px;
+            }
+            .profile__username {
+                font-size: 14px;
+            }
+            .profile__address {
+                font-size: 10px;
+            }
+        }
+        .stats {
+            .stats__item {
+                width: 78px;
+                height: 52px;
+                margin: 0 6px;
+
+                .item__type, .item__count {
+                    font-size: 12px;
+                }
+           }
+        }
+    }
+
+    .main {
+        grid-template-columns: repeat(3, 109px);
+        grid-template-rows: repeat(3,109px);
+        gap: 12px;
+        margin-bottom: 44px;
+    }
+
+    .footer {
+        font-size: 14px;
     }
 }
